i18n(es):  multiple updates of pages (#2416)
* updates

* fixed typo

* remove migrate.mdx

Co-authored-by: Kevin Zuniga Cuellar <kzunigac@uvm.edu>
Co-authored-by: Kevin Zuniga Cuellar <46791833+kevinzunigacuellar@users.noreply.github.com>

--- a/src/pages/es/reference/configuration-reference.mdx
+++ b/src/pages/es/reference/configuration-reference.mdx
@@ -111,7 +111,6 @@ El valor puede ser una ruta absoluta del sistema de archivos o una ruta relativa
 </p>
 
 La URL final donde se desplegará. Astro usa esta URL completa para generar el sitemap y las URL canónicas en la compilación final. Se recomienda establecer esta configuración para aprovechar al máximo Astro.
-
 ```js
 {
   site: 'https://www.my-site.dev',
@@ -126,14 +125,21 @@ La URL final donde se desplegará. Astro usa esta URL completa para generar el s
 **Tipo:** `string`
 </p>
 
-La ruta base en la que se desplegará. Astro compilará tus páginas y recursos usando esta ruta como la raíz. En este momento, esta configuración no tiene efecto durante el modo de desarrollo.
+La ruta base en la que se desplegará. Astro usará esta ruta como la raíz para tus páginas y activos en desarrollo y producción.
 
-Puedes acceder a este valor en tu aplicación usando `import.meta.env.BASE_URL`.
+En el ejemplo de abajo, `astro dev` empezará tu servidor en `/docs`.
 
 ```js
 {
   base: '/docs',
 }
+```
+
+Cuando utilices esta opción, todas tus importaciones de activos estáticos y URL deben agregar la base como prefijo. Puedes acceder a este valor a través de `import.meta.env.BASE_URL`.
+
+```astro
+<a href="/docs/about/">About</a>
+<img src=`${import.meta.env.BASE_URL}/image.png`>
 ```
 
 
@@ -286,6 +292,29 @@ Este valor es relativo al `outDir`.
 ```
 
 
+### build.assets
+
+<p>
+
+**Tipo:** `string`<br />
+**Por defecto:** `'_astro'`<br />
+<Since v="2.0.0" />
+</p>
+
+Especifica el directorio en la salida de compilación donde los activos generados por Astro (por ejemplo, JS y CSS empaquetados) deben ir.
+
+```js
+{
+  build: {
+    assets: '_custom'
+  }
+}
+```
+**Ver también:**
+- outDir
+
+
+
 ### build.serverEntry
 
 <p>
@@ -428,10 +457,6 @@ Qué resaltador de sintaxis usar, si lo hay.
 
 Pasa [plugins de remark](https://github.com/remarkjs/remark) para personalizar la construcción del Markdown. Puedes importar y aplicar la función del plugin (recomendado), o pasar el nombre del plugin como string.
 
-:::caution
-Proveer una lista de plugins **removerá** nuestros plugins por defecto. Para mantener los incluidos por defecto, lee sobre la flag [`extendDefaultPlugins`](#markdownextenddefaultplugins).
-:::
-
 ```js
 import remarkToc from 'remark-toc';
 {
@@ -451,10 +476,6 @@ import remarkToc from 'remark-toc';
 
 Pasa [plugins de rehype](https://github.com/remarkjs/remark-rehype) para personalizar cómo el HTML generado en compilación es procesado. Puedes importar y aplicar la función del plugin (recomendado), o pasar el nombre del plugin como string.
 
-:::caution
-Proveer una lista de plugins **removerá** nuestros plugins por defecto. Para mantener los incluidos por defecto, lee sobre la flag [`extendDefaultPlugins`](#markdownextenddefaultplugins).
-:::
-
 ```js
 import rehypeMinifyHtml from 'rehype-minify';
 {
@@ -465,22 +486,41 @@ import rehypeMinifyHtml from 'rehype-minify';
 ```
 
 
-### markdown.extendDefaultPlugins
+### markdown.gfm
 
 <p>
 
 **Tipo:** `boolean`<br />
-**Por defecto:** `false`
+**Por defecto:** `true`<br />
+<Since v="2.0.0" />
 </p>
 
-Astro aplica los plugins [GitHub-flavored Markdown](https://github.github.com/gfm/) y [Smartypants](https://github.com/silvenon/remark-smartypants) por defecto. Si deseas añadir tus propios plugins de remark o rehype, puedes mantener los incluidos por defecto, puedes hacerlo estableciendo la flag `extendDefaultPlugins` con el valor `true`:
+Astro usa [GitHub-flavored Markdown](https://github.com/remarkjs/remark-gfm) por defecto. Para deshabilitarlo, establece la flag `gfm` a `false`:
 
 ```js
 {
   markdown: {
-    extendDefaultPlugins: true,
-    remarkPlugins: [exampleRemarkPlugin],
-    rehypePlugins: [exampleRehypePlugin],
+    gfm: false,
+  }
+}
+```
+
+
+### markdown.smartypants
+
+<p>
+
+**Tipo:** `boolean`<br />
+**Por defecto:** `true`<br />
+<Since v="2.0.0" />
+</p>
+
+Astro usa el formateador [SmartyPants](https://daringfireball.net/projects/smartypants/) por defecto. Para deshabilitarlo, establezca la propiedad `smartypants` a `false`:
+
+```js
+{
+  markdown: {
+    smartypants: false,
   }
 }
 ```
@@ -554,92 +594,3 @@ Para ayudar a algunos usuarios a migrar entre versiones de Astro, ocasionalmente
 Estas flags te permiten optar por algunos comportamientos desactualizados u obsoletos de Astro
 en la última versión, para que pueda continuar actualizándose y aprovechar los nuevos lanzamientos de Astro.
 
-### legacy.astroFlavoredMarkdown
-
-<p>
-
-**Tipo:** `boolean`<br />
-**Por defecto:** `false`<br />
-<Since v="1.0.0-rc.1" />
-</p>
-
-Habilita el soporte anterior a v1.0 de Astro para componentes y expresiones JSX en archivos Markdown `.md` (y extensiones alternativas para archivos markdown como ".markdown").
-En Astro `1.0.0-rc`, este comportamiento original se eliminó como predeterminado, a favor de nuestra nueva [integración MDX](/es/guides/integrations-guide/mdx/).
-
-Para habilitar este comportamiento, establece `legacy.astroFlavoredMarkdown` en `true` en el [archivo de configuración `astro.config.mjs`](/es/guides/configuring-astro/#archivo-de-configuración-de-astro).
-
-```js
-{
-  legacy: {
-    // Ejemplo: Agrega soporte para funcionalidades de Markdown obsoletas
-    astroFlavoredMarkdown: true,
-  }
-}
-```
-
-
-## Flags experimentales
-
-Astro ofrece flags experimentales para brindar a los usuarios acceso anticipado a nuevas funcionalidades. No se garantiza que estas flags sean estables.
-
-### experimental.errorOverlay
-
-<p>
-
-**Tipo:** `boolean`<br />
-**Por defecto:** `false`<br />
-<Since v="1.7.0" />
-</p>
-
-Permite el soporte experimental para el nuevo componente error overlay.
-
-Para habilitar este comportamiento, establece `experimental.errorOverlay` como `true` en tu configuración de Astro:
-
-```js
-{
-	experimental: {
-		errorOverlay: true,
-	},
-}
-```
-
-### experimental.prerender
-
-<p>
-
-**Tipo:** `boolean`<br />
-**Por defecto:** `false`<br />
-<Since v="1.7.0" />
-</p>
-
-Habilita el soporte experimental para páginas pre-renderizadas al generar un servidor.
-
-Para habilitar este comportamiento, establece `experimental.prerender` como `true` en tu configuración de Astro:
-
-```js
-{
-	experimental: {
-		prerender: true,
-	},
-}
-```
-
-### experimental.contentCollections
-
-<p>
-
-**Tipo:** `boolean`<br />
-**Por defecto:** `false`<br />
-<Since v="1.7.0" />
-</p>
-
-Permite el soporte experimental para [Colecciones de contenido](/es/guides/content-collections/). Esto hace que el directorio `src/content/` sea un directorio reservado que es gestionado por Astro, e introduce el módulo `astro:content` para consultar dicho contenido.
-
-Para habilitar este comportamiento, establece `experimental.contentCollections` como `true` en tu configuración de Astro:
-
-```js
-{
-	experimental: {
-		contentCollections: true,
-	},
-}
