Document `Astro.site` trailing slash change

--- a/src/pages/en/guides/upgrade-to/v2.mdx
+++ b/src/pages/en/guides/upgrade-to/v2.mdx
@@ -84,6 +84,26 @@ Astro 2.0 now includes the Collections API for organizing your Markdown and MDX 
 
 Rename an existing `src/content/` folder to avoid conflicts. This folder, if it exists, can now only be used for [content collections](/en/guides/content-collections/).
 
+### Changed: `Astro.site` trailing slash
+
+In 1.0, Astro ensured the URL you set as `site` in `astro.config.mjs` always had a trailing slash when accessed using `Astro.site`.
+
+Astro 2.0 stops modifying the value of `site`. If you pass a URL without a trailing slash, `Astro.site` will also not have a trailing slash.
+
+#### What should I do?
+
+Make sure you set `site` using a URL that includes the trailing slash.
+
+```js del={5} ins={6}
+// astro.config.mjs
+import { defineConfig } from 'astro/config';
+
+export default defineConfig({
+  site: 'https://example.com',
+  site: 'https://example.com/',
+});
+```
+
 ### Changed: `_astro/` folder for build assets
 
 In 1.0, assets were built to various locations, including `assets/`, `chunks/` and the root of the build output.
