--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -90,21 +90,33 @@ If you aren't able to open your project in the browser, go back to the terminal 
 
 ## Starter Templates
 
-You can also start a new astro project based on an existing GitHub repository by passing a `--template` argument to the `create astro` command.
+You can also start a new astro project based on an [official example](https://github.com/withastro/astro/tree/main/examples) or the `main` branch of any GitHub repository by passing a `--template` argument to the `create astro` command.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
+  # create a new project with an official example
+  npm create astro@latest -- --template <example-name>
+
+  # create a new project based on a GitHub repository’s main branch
   npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
+  # create a new project with an official example
+  pnpm create astro@latest --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   pnpm create astro@latest --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
+  # create a new project with an official example
+  yarn create astro --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   yarn create astro --template <github-username>/<github-repo>
   ```
   </Fragment>
