fix: typos in content collections docs

--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -276,7 +276,7 @@ const enDocs = await getCollection('docs', ({ id }) => {
 
 ### `getEntry()`
 
-`getEntry()` is function that returns a specific entry in a collection by entry ID (file path relative to the collection). Both of these are required parameters.
+`getEntry()` is a function that returns a specific entry in a collection by entry ID (file path relative to the collection). Both of these are required parameters.
 
 ```astro
 ---
@@ -295,7 +295,7 @@ const enterprise = await getEntry('blog', 'enterprise.md');
  - `body` - a string containing the raw, uncompiled body of the Markdown or MDX document.
  - `render()` - a function that returns the compiled body of the Markdown or MDX document via the `<Content />` component ([See complete documentation](#rendering-entry-content)).
 
-Querying your content files with `getCollection()`or `getEntry()` allows you to use frontmatter properties from an entry's `data` object in [JSX-like expressions](/en/core-concepts/astro-components/#jsx-like-expressions) or pass props to other components, such as a layout. You can optionally add type safety with a built-in utility.
+Querying your content files with `getCollection()` or `getEntry()` allows you to use frontmatter properties from an entry's `data` object in [JSX-like expressions](/en/core-concepts/astro-components/#jsx-like-expressions) or pass props to other components, such as a layout. You can optionally add type safety with a built-in utility.
 
 For example, you can use a `getCollection()` query to filter and then display a list of links to all your published blog posts:
 ```astro
