Document using `--template` with other branch names (#2413)
Co-authored-by: Ohans Emmanuel <ohansemmanuel@outlook.com>

--- a/src/pages/en/install/auto.mdx
+++ b/src/pages/en/install/auto.mdx
@@ -90,25 +90,39 @@ If you aren't able to open your project in the browser, go back to the terminal 
 
 ## Starter Templates
 
-You can also start a new astro project based on an existing GitHub repository by passing a `--template` argument to the `create astro` command.
+You can also start a new astro project based on an [official example](https://github.com/withastro/astro/tree/main/examples) or the `main` branch of any GitHub repository by passing a `--template` argument to the `create astro` command.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
+  # create a new project with an official example
+  npm create astro@latest -- --template <example-name>
+
+  # create a new project based on a GitHub repository’s main branch
   npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
+  # create a new project with an official example
+  pnpm create astro@latest --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   pnpm create astro@latest --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
+  # create a new project with an official example
+  yarn create astro --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   yarn create astro --template <github-username>/<github-repo>
   ```
   </Fragment>
 </PackageManagerTabs>
+
+By default, this command will use the template repository’s `main` branch. To use a different branch name, pass it as part of the `--template` argument: `<github-username>/<github-repo>#<branch>`.
 
 Explore our [themes and starters showcase](https://astro.build/themes/) where you can browse themes for blogs, portfolios, documentation, landing pages, and more! Or, [search on GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) for even more starter projects.
 
