--- a/src/pages/es/guides/styling.mdx
+++ b/src/pages/es/guides/styling.mdx
@@ -478,6 +478,13 @@ Vue en Astro es compatible con los mismos métodos que `vue-loader`:
 
 Svelte en Astro también funciona exactamente como se espera: [Svelte Styling Docs][svelte-style].
 
+## Estilando Markdown
+
+Cualquier método de estilo de Astro está disponible para un [componente de diseño de Markdown](/es/core-concepts/layouts/#markdownmdx-layouts).
+
+You can apply global styles to your Markdown content by adding [`<style>` tags](#global-styles) and [imported stylesheets](#external-styles) to the layout that wraps your page content. You can also add [CSS integrations](#css-integrations) including [Tailwind](/en/guides/integrations-guide/tailwind/).
+
+If you are using Tailwind, the [typography plugin](https://tailwindcss.com/docs/typography-plugin) can be useful for styling Markdown.
 
 ## Avanzado
 
