--- a/src/pages/es/guides/markdown-content.mdx
+++ b/src/pages/es/guides/markdown-content.mdx
@@ -15,6 +15,24 @@ Con la [integración @astrojs/mdx](/es/guides/integrations-guide/mdx/) instalada
 
 ## Páginas de Markdown y MDX
 
+### Colecciones de contenido
+
+Puedes gestionar tus archivos Markdown y MDX en Astro en una carpeta especial `src/content/`. [Las colecciones de contenido](/es/guides/content-collections/) te ayudan a organizar tu contenido, validar tu frontmatter y proporcionar seguridad de tipo TypeScript automática mientras trabajas con tu contenido.
+
+<FileTree>
+- src/content/
+  - **newsletter/** 
+    - week-1.md
+    - week-2.md
+  - **authors/**
+    - grace-hopper.md
+    - alan-turing.md
+</FileTree>
+
+
+
+See more about using [content collections in Astro](/en/guides/content-collections/).
+
 ### Enrutamiento basado en archivos
 
 Astro trata cualquier archivo `.md` (u otra extensión alternativa soportada) o `.mdx` dentro de la carpeta `/src/pages` como una página.
@@ -131,6 +149,9 @@ const { frontmatter } = Astro.props;
 </html>
 ```
 
+Puedes también [estilizar tu Markdown](/es/guides/styling/#estilando-markdown) en tu componente plantilla.
+
+
 📚 Aprende más acerca de [Plantillas de Markdown](/es/core-concepts/layouts/#plantillas-de-markdownmdx).
 
 
@@ -150,7 +171,6 @@ Puedo vincular internamente a [mi conclusión](#conclusión) en la misma página
 
 Puedo usar la URL `https://mi-dominio.com/page-1/#introducción` para navegar directamente a mi Introducción en la página.
 ```
-
 
 ### Escapando caracteres especiales
 
@@ -428,7 +448,7 @@ Puedes personalizar cómo remark analiza tu Markdown en `astro.config.mjs`. Pued
 
 ### Plugins de Markdown
 
-Astro es compatible con plugins externos de [remark](https://github.com/remarkjs/remark) y [rehype](https://github.com/rehypejs/rehype) para Markdown y MDX. Estos plugins te permiten extender tu Markdown con nuevas características, como [generación automática de tabla de contenidos](https://github.com/remarkjs/remark-toc), [aplicar etiquetas accesibles a emojis](https://github.com/florianeckerstorfer/remark-a11y-emoji) y más.
+Astro es compatible con plugins externos de [remark](https://github.com/remarkjs/remark) y [rehype](https://github.com/rehypejs/rehype) para Markdown y MDX. Estos plugins te permiten extender tu Markdown con nuevas características, como [generación automática de tabla de contenidos](https://github.com/remarkjs/remark-toc), [aplicar etiquetas accesibles a emojis](https://github.com/florianeckerstorfer/remark-a11y-emoji) y [estilando tu Markdown](/es/guides/styling/#estilando-markdown).
 
 ¡Te invitamos a darle un vistazo a las listas [awesome-remark](https://github.com/remarkjs/awesome-remark) y [awesome-rehype](https://github.com/rehypejs/awesome-rehype) para ver más plugins populares! Puedes leer sus README para seguir las instrucciones de instalación de cada uno.
 
