--- a/src/pages/es/install/auto.mdx
+++ b/src/pages/es/install/auto.mdx
@@ -89,25 +89,39 @@ Si no es posible abrir el proyecto en el navegador, regresa a la terminal donde 
 
 ## Plantillas de Inicio
 
-También comenzar un proyecto nuevo de Astro basado en un repositorio de GitHub existente pasando el argumento `--template` al comando `create astro`.
+Puedes empezar un nuevo proyecto de Astro basado en un [ejemplo oficial](https://github.com/withastro/astro/tree/main/examples) o en la rama `main` de cualquier repositorio de GitHub pasando un argumento `--template` al comando `create astro`.
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
+  # create a new project with an official example
+  npm create astro@latest -- --template <example-name>
+
+  # create a new project based on a GitHub repository’s main branch  
   npm create astro@latest -- --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
+  # create a new project with an official example
+  pnpm create astro@latest --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   pnpm create astro@latest --template <github-username>/<github-repo>
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
+  # create a new project with an official example
+  yarn create astro --template <example-name>
+  
+  # create a new project based on a GitHub repository’s main branch
   yarn create astro --template <github-username>/<github-repo>
   ```
   </Fragment>
 </PackageManagerTabs>
+
+Por defecto, este comando utilizará la rama `main` del repositorio de plantilla. Para utilizar una rama diferente, pásala como parte del argumento `--template`: `<github-username>/<github-repo>#<branch>`.
 
 Explora nuestros [temas y proyectos de inicio](https://astro.build/themes/) donde puedes navegar por temas para blogs, portafolios, documentación, páginas de inicio y más. ¡O, [busca en GitHub](https://github.com/search?o=desc&q=astro+starter&s=stars&type=Repositories) para más proyectos de inicio!
 
