--- a/src/pages/es/guides/markdown-content.mdx
+++ b/src/pages/es/guides/markdown-content.mdx
@@ -4,7 +4,7 @@ title: Markdown & MDX
 description: Aprende a crear contenido usando Markdown o MDX en Astro
 i18nReady: true
 ---
-
+import FileTree from '~/components/FileTree.astro';
 import Since from '~/components/Since.astro';
 
 El [Markdown](https://daringfireball.net/projects/markdown/) se usa comúnmente para crear contenido con mucho texto, como artículos de blog y documentación. Astro incluye soporte integrado para archivos estándar de Markdown (`.md`, `.markdown`, `.mdown`, `.mkdn`, `.mkd`, `.mdwn`).
