--- a/src/pages/en/guides/content-collections.mdx
+++ b/src/pages/en/guides/content-collections.mdx
@@ -244,7 +244,7 @@ Astro treats the `src/content/` directory as special. This is where **collection
 
 ## Querying Collections
 
-Astro provides two functions to query a collection and return one (or more) content entries from it: [`getCollection()`](en/reference/api-reference/#getcollection) and [`getEntryBySlug()`](en/reference/api-reference/#getentrybyslug).
+Astro provides two functions to query a collection and return one (or more) content entries from it: [`getCollection()`](/en/reference/api-reference/#getcollection) and [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug).
 
 ```js
 import { getCollection, getEntryBySlug } from 'astro:content';
@@ -304,7 +304,7 @@ const blogEntries = await getCollection('blog');
 
 ### Passing content as props
 
-A component can also expects a `getCollection()` or `getEntryBySlug()` content entry as a prop. 
+A component can also pass an entire content entry as a prop. 
 
 If you do this, you can use the `CollectionEntry` utility to correctly type your components props using TypeScript.  This utility takes a string argument that matches the name of your collection schema, and will inherit all of the properties of that collection's schema.
 
@@ -377,7 +377,7 @@ The way that you generate routes in Astro depends on your build [`output`](/en/r
 
 If you are building a static website (Astro's default behavior), you are expected use Astro's [`getStaticPaths()`](/en/reference/api-reference/#getstaticpaths) to create multiple routes from the same `src/pages` component at build-time.
 
-Inside of `getStaticPaths()`, you would call [`getCollection()`](en/reference/api-reference/#getcollection) to query your content entries and then create all of the static paths you need using the `slug` parameter for each page. 
+Inside of `getStaticPaths()`, you would call [`getCollection()`](/en/reference/api-reference/#getcollection) to query your content entries and then create all of the static paths you need using the `slug` parameter for each page. 
 
 ```astro "{ slug: entry.slug }"
 ---
@@ -402,7 +402,7 @@ This will generate a new page for every entry in the `blog` collection. For exam
 
 ### Building for server output (SSR)
 
-If you are building a dynamic website (using Astro's SSR support), you are not expected to generate any paths ahead-of-time during the build. Instead, your page should examine the request (using `Astro.request` or `Astro.params`) to find the `slug` on-demand, and then fetch it using `getEntryBySlug()`. 
+If you are building a dynamic website (using Astro's SSR support), you are not expected to generate any paths ahead-of-time during the build. Instead, your page should examine the request (using `Astro.request` or `Astro.params`) to find the `slug` on-demand, and then fetch it using [`getEntryBySlug()`](/en/reference/api-reference/#getentrybyslug). 
 
 
 ```astro "{ slug: Astro.params }"
