respond to Dan feedback

--- a/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-gatsby.mdx
@@ -37,9 +37,7 @@ When you rebuild your Gatsby site in Astro, you will notice some important diffe
 
 ## Convert your Gatsby Project
 
-Each project migration will look different. But, there are some common steps you will need to get your new Astro site up and running.
-
-Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
+Each project migration will look different, but there are some common steps  to follow when converting from Next.js to Astro. This page will get you started in the right direction.
 
 ### Create a new Astro project
 
@@ -107,6 +105,8 @@ Gatsby has several top-level configuration files that also include site and page
 
 
 ### Put your code in `src`
+
+Following [Astro's project structure](/en/core-concepts/project-structure/):
 
 1. **Delete** Gatsby's `public/` folder. 
     
@@ -277,7 +277,7 @@ These `.astro` pages must be located within `src/pages/` and will have page rout
 
 Astro has built-in support for Markdown and an optional integration for MDX files. Your existing [Markdown and MDX files](/en/guides/markdown-content/) can be reused but may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). They can also be placed within `src/pages/` to take advantage of automatic file-based routing.
 
-When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
+Alternatively, you can use [content collections](/en/guides/content-collections/) in Astro to store and manage your content. When part of a collection, Markdown and MDX files will live in folders within `src/content/`. You will retrieve the content yourself and [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
 ### Migrating Tests
 
@@ -298,7 +298,7 @@ Convert any Gatsby `<Link to="">`, `<NavLink>` etc. components to HTML `<a href=
 <a href="/blog">Blog</a>
 ```
 
-Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
+Astro does not use any special component for links, although you are welcome to build your own `<Link>` component. You can then import and use this `<Link>` just as you would any other component.
 
 ```astro title="src/components/Link.astro"
 ---
@@ -353,7 +353,7 @@ Convert any inline style objects (`style={{ fontWeight: "bold" }}`) to inline HT
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
-You may also need to replace any CSS-in-JS libraries (e.g. styled-components) with other available CSS options in Astro.
+You may also need to replace any [CSS-in-JS libraries](https://github.com/withastro/astro/issues/4432) (e.g. styled-components) with other available CSS options in Astro.
 
 Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
 
