--- a/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
+++ b/src/pages/en/guides/migrate-to-astro/from-nextjs.mdx
@@ -18,24 +18,22 @@ Next.js and Astro share some similarities that will help you migrate your projec
 - Astro projects can also be SSG or [SSR with page-level prerendering](/en/guides/server-side-rendering/#prerendering).
 - Astro uses file-based routing, and [allows specially named pages to create dynamic routes](/en/core-concepts/routing/#dynamic-routes).
 - Astro is [component-based](/en/core-concepts/components/), and your markup structure will be similar before and after your migration.
-- Astro has [official integrations for using React components](/en/guides/integrations-guide/react/). Note that in Astro, React files **must** have a `.jsx` or `.tsx` extension.
-- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. You may be able to keep some or all of your existing React components and dependencies.
+- Astro has [official integration for using React, Preact, and Solid](/en/guides/integrations-guide/react/) so you can use your existing JSX components. Note that in Astro, these files **must** have a `.jsx` or `.tsx` extension.
+- Astro has support for [installing NPM packages](/en/guides/imports/#npm-packages), including React libraries. Many of your existing dependencies will work in Astro.
 
 ## Key Differences between Next.js and Astro
 
 When you rebuild your Next.js site in Astro, you will notice some important differences:
 
-- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Next.js is a React-based SPA (single-page application). Astro sites are multi-page apps built using `.astro` components, but can also support React, Preact, Vue.js, Svelte, SolidJS, AlpineJS, Lit, and raw HTML templating.
+- [MPA vs SPA](/en/concepts/mpa-vs-spa/): Next.js is a React single-page app, and uses `index.js` as your project's root. Astro is a multi-page site, and `index.astro` is your home page.
 
-- [Astro components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
+- [`.astro` components](/en/core-concepts/astro-components/) are not written as exported functions that return page templating. Instead, you'll split your code into a "code fence" and a body exclusively for the HTML you generate.
 
-- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate in Astro, such as dashboards.
+- [Content-focus](/en/concepts/why-astro/): Astro was designed primarily for content-focused sites with small pieces of interactivity. An existing Next.js app might be built for high client-side interactivity and may include items that are difficult to replicate using `.astro` components, such as dashboards.
 
 ## Convert your Next.js Project
 
-Each project migration will look different. But, there are some common steps you will need to get your new Astro site up and running.
-
-Even after following these instructions, you probably won't have your new Astro site exactly the way you want it yet. But, this page will get you started in the right direction.
+Each project migration will look different, but there are some common steps  to follow when converting from Next.js to Astro. This page will get you started in the right direction.
 
 ### Create a new Astro project
 
@@ -92,6 +90,8 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
 
 ### Put your source code in `src`
 
+Following [Astro's project structure](/en/core-concepts/project-structure/):
+
 1. **Keep** Next's `public/` folder untouched. 
    
     Astro uses the `public/` directory for static assets, just like Next. There is no change needed to this folder, nor its contents.
@@ -101,7 +101,7 @@ You may find it useful to install some of [Astro's optional integrations](/en/gu
     Like Next, Astro's `src/pages/` folder is a special folder used for file-based routing. All other folders are optional, and you can organize the contents of your `src/` folder any way you like. Other common folders in Astro projects include `src/layouts/`, `src/components`, `src/styles`, `src/scripts`.
 
 
-### Repurpose config file
+### The Astro config file
 
 Astro has a configuration file at the root of your project called [`astro.config.mjs`](/en/guides/configuring-astro/). This is used only for configuring your Astro project and any installed integrations, including [SSR adapters](/en/guides/deploy/).
 
@@ -329,7 +329,7 @@ These [`.astro` pages](/en/core-concepts/pages/) must be located within `src/pag
 
 Astro has built-in support for Markdown and an optional integration for MDX files. You can reuse any existing [Markdown and MDX files](/en/guides/markdown-content/), but they may require some adjustments to their frontmatter, such as adding [Astro's special `layout` frontmatter property](/en/core-concepts/layouts/#markdownmdx-layouts). You will no longer need to manually create pages for each Markdown-generated route. These files can be placed within `src/pages/` to take advantage of automatic file-based routing.
 
-When part of a [content collection](/en/guides/content-collections/), Markdown and MDX files will live in folders within `src/content/` and you will [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
+Alternatively, you can use [content collections](/en/guides/content-collections/) in Astro to store and manage your content. When part of a collection, Markdown and MDX files will live in folders within `src/content/`. You will retrieve the content yourself and [generate those pages dynamically](/en/guides/content-collections/#generating-pages-from-content-collections).
 
 ### Migrating Tests
 
@@ -348,7 +348,7 @@ Convert any Next `<Link to="">`, `<NavLink>` etc. components to HTML `<a href=""
 <a href="/blog">Blog</a>
 ```
 
-Astro does not use any special component for links, although you are welcome to build custom link components. You can then import and use this `<Link>` just as you would any other component.
+Astro does not use any special component for links, although you are welcome to build your own `<Link>` component. You can then import and use this `<Link>` just as you would any other component.
 
 ```astro title="src/components/Link.astro"
 ---
@@ -359,7 +359,7 @@ const { to } = Astro.props
 
 ### Next Imports to Astro
 
-If necessary, update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
+Update any [file imports](/en/guides/imports/) to reference relative file paths exactly. This can be done using [import aliases](/en/guides/typescript/#import-aliases), or by writing out a relative path in full. 
 
 Note that `.astro` and several other file types must be imported with their full file extension.
 
@@ -431,7 +431,7 @@ Convert any inline style objects (`style={{fontWeight: "bold"}}`) to inline HTML
 <div style="background-color: #f4f4f4; padding: 1em;">{message}</div>
 ```
 
-You may also need to replace any CSS-in-JS libraries (e.g. styled-components) with other available CSS options in Astro.
+You may also need to replace any [CSS-in-JS libraries](https://github.com/withastro/astro/issues/4432) (e.g. styled-components) with other available CSS options in Astro.
 
 Tailwind is supported after installing the [Tailwind integration](/en/guides/integrations-guide/tailwind/). No changes to your code are required!
 
